.kustomization/components/api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filexplorer
  labels:
    app: filexplorer
    framework: flask
  annotations:
    a8r.io/description: "CRUD operations in the current filesystem"
    a8r.io/owner: renatodamas

spec:
  replicas: 2

  selector:
    matchLabels:
      app: filexplorer

  strategy:
    # Update each pod at a time and prevent
    # additional pods from created
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 0

  template:
    metadata:
      labels:
        app: filexplorer
    spec:
      containers:
        - name: filexplorer
          image: filexplorer:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              add: [ ]
      serviceAccountName: filexplorer
      restartPolicy: Always
