.kustomization/components/api/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: filexplorer
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: filexplorer
              servicePort: 80
